--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,31 @@ section{
 .main--text{
   margin-top: 0;
 }
+
+.card {
+  width: 175px;
+  font-size: 12px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.card--image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card-stats {
+  display: flex;
+  gap:4px;
+ margin-left: 35px;
+}
+
+.card--star {
+  height: 14px;
+ 
+}
+.gray {
+  color: #918E9B;
+}
+.bold{font-weight: bold;
+}
