--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,12 @@ section{
 }
 
 .main--header{
-  margin-bottom: 16px;
+  margin: 30px auto;
 }
 
 .main--text{
-  margin-top: 0;
+  margin: 0 auto;
+  padding: 10px 10px;
 }
 
 .card {
@@ -40,11 +41,14 @@ section{
   font-size: 12px;
   margin-left: 10px;
   text-align: center;
+  flex: 0 0 auto;        
+  flex-direction: column;
 }
 
 .card--image {
   width: 100%;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
 .card-stats {
@@ -61,4 +65,12 @@ section{
   color: #918E9B;
 }
 .bold{font-weight: bold;
+}
+.cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  overflow-x: auto;
+  margin: 0 auto;
+  justify-content: center;
 }
